# tap_json

./: LICENSE  README.md  environment.yml  meltano.yml  pyproject.toml
.github/workflows/: test.yml
proto/: read.py
tap-json/: README.md  meltano.yml  pyproject.toml
tap-json/tap_json/: __main__.py  client.py  streams.py  tap.py
tap-json/tap_json/tests/: test_core.py
tap-json/tap_json/tests/data/: two.json
tap-json/tests/: __init__.py  test_core.py
tap_json/: __init__.py  client.py  util.py
tap_json/tests/: config_file.json
tap_json/tests/data/: two.json
tap_json/tests/data/one/: one.json
tap_json/tests/data/subfolder/: three.json
